[package]
name = "delta-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrow = "6.0.0"
deltalake = { git = "https://github.com/delta-io/delta-rs", branch = "main", features = ["datafusion-ext"] }
datafusion = "6.0.0"
tokio = { version = "1.14.0", features = ["full"] }
